@@ -1,3 +1,5 @@
+HEAD
+	+ Added module pre-checks for configuration backup
 2.0.13
 	+ Fixed dashboard graphs refresh
 	+ Fixed module existence check when dpkg is running
